<resources>
    <string name="app_name">Se Liga</string>
    <string name="about_title">Se Liga!</string>
    <string name="created_by">Criado por Ruben Braga</string>
    <string name="check_repository">Conferir repositório</string>
    <string name="linkedin">LinkedIn</string>
    <string name="version">Versão %1$s</string>
    <string name="empty_content">Nenhum conteúdo disponível</string>
    <string name="home">Home</string>
    <string name="menu_home">Início</string>
    <string name="menu_management">Gerenciamento</string>
    <string name="menu_export">Exportar</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_payments">Pagamentos</string>
    <string name="menu_charges">Cobranças</string>
    <string name="screen_selector">Seletor de telas</string>
    <string name="settings_popup">Pop-up de Configurações</string>
    <string name="undefined">Undefined</string>
    <string name="none">Nenhum</string>
    <string name="client_list">Lista de clientes</string>
    <string name="payment_list">Lista de pagamentos</string>
    <string name="charge_list">Lista de cobranças</string>
    <string name="name">Nome</string>
    <string name="value">Valor</string>
    <string name="date">Data</string>
    <string name="close">Fechar</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="manage_clients">Gerenciar Clientes</string>
    <string name="manage_payments">Gerenciar Pagamentos</string>
    <string name="manage_charges">Gerenciar Cobranças</string>
    <string name="client_already_exists">Cliente já existe</string>
    <string name="client_added_successfully">Cliente adicionado com sucesso</string>
    <string name="clear_client_list">Limpar lista de clientes</string>
    <string name="clear_payment_list">Limpar pagamentos</string>
    <string name="clear_charge_list">Limpar cobranças</string>
    <string name="clear_list_question">Você realmente deseja limpar a lista de %1$s?</string>
    <string name="list_cleared_successfully">Lista limpa com sucesso</string>
    <string name="item_removed_from_list">Item removido da lista</string>
    <string name="no_value">Sem valor</string>
    <string name="today">Hoje</string>
    <string name="add_payment">Adicionar pagamento</string>
    <string name="add_charge">Adicionar cobrança</string>
    <string name="no_clients_registered">Não existe nenhum cliente cadastrado</string>
    <string name="no_client_selected">Não é possível adicionar pagamento sem cliente selecionado</string>
    <string name="invalid_client_name">Nome de cliente inválido</string>
    <string name="payment_added_successfully">Pagamento adicionado com sucesso</string>
    <string name="charge_added_successfully">Cobrança adicionado com sucesso</string>
    <string name="invalid_payment_value">Valor de pagamento inválido</string>
    <string name="invalid_payment_date">Data de pagamento inválida</string>
    <string name="invalid_charge_value">Valor de cobrança inválido</string>
    <string name="invalid_charge_date">Data de cobrança inválida</string>
    <string name="client_removal">Remoção de cliente</string>
    <string name="client_removal_question">Você realmente deseja remover o cliente %1$s?</string>
    <string name="payment_removal">Remoção de pagamento</string>
    <string name="payment_removal_question">Você realmente deseja remover o %1$s?</string>
    <string name="export_payments">Exportar Pagamentos</string>
    <string name="export_charges">Exportar Cobranças</string>
    <string name="export_data">Exportar Dados</string>
    <string name="data_exported_successfully">Dados exportados com sucesso em Downloads</string>
    <string name="export_confirmation">Confirmar exportação</string>
    <string name="export_confirmation_question">Você realmente deseja exportar os dados?</string>
    <string name="hello_user">Olá, %1$s</string>
    <string name="see_your_general_data">Veja seus dados gerais</string>
    <string name="clients_count">%1$s\nClientes</string>
    <string name="payments_count">%1$s\nPagamentos</string>
    <string name="charges_count">%1$s\nCobranças</string>
    <string name="clients_week">%1$s Clientes da semana</string>
    <string name="clients_most_operations">Clientes com mais operações na semana</string>
    <string name="operations_week">%1$s Operações da semana</string>
    <string name="payment_operation_week">Pagamentos: %1$s</string>
    <string name="charge_operation_week">Cobranças: %1$s</string>
    <string name="events_week">Eventos da semana</string>
    <string name="first_time_app">Primeira vez no App?</string>
    <string name="import_data">Por favor, importe seus dados.</string>
    <string name="import_text">Importar</string>
    <string name="imported_text">Importado</string>
    <string name="previous">Anterior</string>
    <string name="next">Próximo</string>
    <string name="add_your_name">Adicione seu nome</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="invalid_file_format">Formato de arquivo inválido</string>
    <string name="file_already_imported">Arquivo já importado com sucesso</string>
    <string name="import_file_first">Por favor, importe um arquivo primeiro.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>