<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startup.importData.ImportDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:id="@+id/textView_first_time_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_data"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_import"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:paddingVertical="15dp"
            android:text="@string/import_text"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:cornerRadius="10dp"
            app:iconGravity="textEnd"
            app:iconSize="24dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_first_time_app"
            app:rippleColor="@color/rippleColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:paddingVertical="18dp"
            android:text="@string/previous"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_import" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:paddingVertical="18dp"
            android:text="@string/next"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_previous"
            app:layout_constraintTop_toBottomOf="@+id/button_import"
            app:rippleColor="@color/rippleColor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>