<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="14dp">

    <LinearLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/add_name_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_square_button"
            android:src="@drawable/ic_baseline_plus"
            android:layout_gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/client_select_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="16dp" >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/client_select_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/value_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/value_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/uncheckedButtonBackground"
            android:text="@string/undefined"
            app:cornerRadius="10dp"
            android:textColor="@color/primaryDark" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/value_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:hint="@string/value">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/uncheckedButtonBackground"
            android:text="@string/undefined"
            android:layout_gravity="center"
            app:cornerRadius="10dp"
            android:textColor="@color/primaryDark" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:hint="@string/date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/undefined"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/buttonBackground" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/undefined"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/removeButtonBackground"  />

</LinearLayout>