<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undefined"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/home_default_horizontal_margin"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/primaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_your_general_data"
            android:layout_marginHorizontal="@dimen/home_default_horizontal_margin"
            android:fontFamily="@font/roboto_light"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/top_bottom_border_background"
            android:layout_marginTop="18dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/textView_client_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/primaryDark"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/undefined"/>

            <TextView
                android:id="@+id/textView_payment_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/primaryDark"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/undefined"/>

            <TextView
                android:id="@+id/textView_charge_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/primaryDark"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/undefined"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingHorizontal="@dimen/home_default_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_weekly_clients_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clients_most_operations"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/primaryDarkVariant"/>

            <TextView
                android:id="@+id/textView_week_clients_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textColor="@color/primaryDark"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="@dimen/home_default_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_weekly_financial_operations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryDark"/>

            <TextView
                android:id="@+id/textView_weekly_payments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textColor="@color/primaryDark"/>

            <TextView
                android:id="@+id/textView_weekly_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined"
                android:layout_marginTop="2dp"
                android:textSize="18sp"
                android:textColor="@color/primaryDark"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.ruben.project.seliga.ui.common.HeaderView
            android:id="@+id/header_weekly_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weekly_event_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="20dp"
            android:fillViewport="false"
            android:requiresFadingEdge="vertical" />

    </LinearLayout>

</FrameLayout>